[package]
name = "tun-udp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
tokio-tun = "0.7.0"
clap = { version = "4.2.7", features = ["derive"] }
ipnet = "2.7.2"
